# wishchain

./: README.md  package-lock.json  package.json  theme.json
client/src/: App.tsx  main.tsx
client/src/components/: DonationDialog.tsx  Footer.tsx  Header.tsx  HowItWorks.tsx  NetworkStatus.tsx  Toast.tsx  TransactionInfo.tsx  WishSubmissionForm.tsx  WishTable.tsx
client/src/lib/: solana.ts
client/src/pages/: WallOfWish.tsx
server/: anchor.ts  db.ts  routes.ts  storage.ts
server/program/: Anchor.toml  Cargo.toml  keypair.json
server/program/src/: lib.rs
shared/: schema.ts
