[package]
name = "wall_of_wish"
version = "0.1.0"
description = "A Solana program for storing wishes on-chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wall_of_wish"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
